force-app/main/default/objects/Survey_Result_Items__c.object
<CustomObject>
    <label>檢核結果產品</label>
    <nameField>
        <label>結果產品</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>經營計劃</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>檢核結果產品</relationshipLabel>
        <relationshipName>Annual_Plan_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimated_Date__c</fullName>
        <label>預估時程</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Already_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>已持有產品</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Auto_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>由flow自動打勾</description>
        <label>自動建議</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Applied_This_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>本次申請產品</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Suggested_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>建議產品</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Follow_Up_Suggested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>科主管建議追蹤</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_For_Not_Applying__c</fullName>
        <label>建議產品未新申請原因</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Check_Follow_Up_Due_Date</fullName>
        <active>true</active>
        <description>User must fill in follow up date if the products needs to be checked by the manager</description>
        <errorConditionFormula>Is_Follow_Up_Suggested__c &amp;&amp; ISNULL(Estimated_Date__c)</errorConditionFormula>
        <errorDisplayField>Estimated_Date__c</errorDisplayField>
        <errorMessage>請填寫預計時程</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Choose_Earlier_Date</fullName>
        <active>true</active>
        <description>不讓使用者選已過的日期</description>
        <errorConditionFormula>Estimated_Date__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Estimated_Date__c</errorDisplayField>
        <errorMessage>請選擇未來的日期</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Uncheck_Auto_Recommended_Products</fullName>
        <active>true</active>
        <description>不讓使用者把自動建議產品打勾取消</description>
        <errorConditionFormula>Is_Auto_Recommended__c &amp;&amp; PRIORVALUE(Is_Suggested_Product__c) != Is_Suggested_Product__c &amp;&amp; !Is_Suggested_Product__c</errorConditionFormula>
        <errorDisplayField>Is_Suggested_Product__c</errorDisplayField>
        <errorMessage>無法打勾取消自動建議的產品</errorMessage>
    </validationRules>
</CustomObject>